# doggie

./: .gitignore  README.md
.github/workflow/: release.yml
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: main.rs
docs/: mcp_mod.md
doggie_bluepill/: Cargo.toml  README.md
doggie_bluepill/.cargo/: config.toml
doggie_bluepill/src/: bluepill.rs  can_device.rs  doggie_bluepill_uart_int.rs  doggie_bluepill_uart_mcp.rs  doggie_bluepill_usb_mcp.rs  evil_bluepill.rs  main.rs  spi.rs  spi_device.rs  uart.rs  uart_device.rs  usb_device.rs
doggie_core/: Cargo.toml
doggie_core/src/: bsp.rs  can.rs  lib.rs  macros.rs  mcp2515.rs  types.rs
doggie_esp32/: Cargo.toml  README.md  monitor.sh
doggie_esp32/.cargo/: config.toml
doggie_esp32/src/: ble.rs  can_mux.rs  doggie_esp32.rs  doggie_esp32_mcp.rs  doggie_esp32_twai.rs  doggie_esp32_twai_ble.rs  evildoggie_esp32.rs  logging.rs  main.rs  serial_mux.rs  soft_timer.rs  spi_device.rs  twai_can.rs
doggie_pico/: Cargo.toml  README.md
doggie_pico/.cargo/: config.toml
doggie_pico/src/: doggie_pico_uart_mcp.rs  doggie_pico_usb_mcp.rs  evildoggie_pico.rs  main.rs  soft_timer.rs  spi.rs  spi_device.rs  unique_id.rs  usb_device.rs
evil_core/: Cargo.toml
evil_core/src/: attack_errors.rs  attack_machine.rs  bsp.rs  can.rs  clock.rs  commands.rs  evil_core.rs  lib.rs  mcp2515.rs  tranceiver.rs
evil_menu/: Cargo.toml
evil_menu/src/: builder.rs  lib.rs
slcan/: Cargo.toml
slcan/src/: lib.rs
