[package]
edition = "2021"
name = "doggie_bluepill"
version = "0.1.0"

[[bin]]
name = "doggie_bluepill_usb_mcp"
path = "src/doggie_bluepill_usb_mcp.rs"

[[bin]]
name = "doggie_bluepill_uart_mcp"
path = "src/doggie_bluepill_uart_mcp.rs"

[[bin]]
name = "doggie_bluepill_uart_int"
path = "src/doggie_bluepill_uart_int.rs"

[[bin]]
name = "evil_bluepill"
path = "src/evil_bluepill.rs"


[dependencies]
# Change stm32f103c8 to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any" ]  }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.1", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-72_000_000"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
static_cell = "2.0.0"

slcan = { version = "0.1.0", path = "../slcan"}
doggie_core = { version = "0.1.0", path = "../doggie_core"}
evil_core = { version = "0.1.0", path = "../evil_core"}

mcp2515 = "0.3.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-hal = "1.0.0"
embedded-can = "0.4.1"

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "d7692b1ae8775723e54de8574a190df4864aa854" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "d7692b1ae8775723e54de8574a190df4864aa854" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "d7692b1ae8775723e54de8574a190df4864aa854" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "d7692b1ae8775723e54de8574a190df4864aa854" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "d7692b1ae8775723e54de8574a190df4864aa854" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "d7692b1ae8775723e54de8574a190df4864aa854" }


[profile.dev]
opt-level = 3
lto = true
debug = 2

[profile.release]
opt-level = 3
lto = true
strip = true
debug = 0
