[package]
edition = "2021"
name = "doggie_core"
version = "0.1.0"

[dependencies]
# Change stm32f103c8 to your chip name, if necessary.

defmt = "0.3"

embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-executor = { version = "0.6.1", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6.0", features = ["defmt"] }

embedded-hal = "1.0.0"
embedded-can = "0.4.1"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

heapless = { version = "0.8", default-features = false }

slcan = { version = "0.1.0", path = "../slcan"}

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "d7692b1ae8775723e54de8574a190df4864aa854" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "d7692b1ae8775723e54de8574a190df4864aa854" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "d7692b1ae8775723e54de8574a190df4864aa854" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "d7692b1ae8775723e54de8574a190df4864aa854" }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
