[package]
name = "doggie_esp32"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "doggie_esp32_mcp"
path = "src/doggie_esp32_mcp.rs"

[[bin]]
name = "doggie_esp32_twai"
path = "src/doggie_esp32_twai.rs"

[dependencies]
esp-hal = { version = "0.22.0" }
esp-backtrace = { version = "0.14.2", features = [
    "exception-handler",
    "panic-handler",
    "defmt",
] }
esp-hal-embassy = { version = "0.5.0", features = ["defmt"] }
esp-println = { version = "0.12.0", features = [ "defmt-espflash", "log" ] }

embassy-time = { version = "0.3.2" }
embassy-executor = { version = "0.6.1", features = ["task-arena-size-12288"] }
embassy-sync = { version = "0.6.0" }

embedded-io-async = "0.6.1"

log = { version = "0.4.22" }
static_cell = "2.1.0"

doggie_core = { version = "0.1.0", path = "../doggie_core"}
defmt = "0.3.8"
embedded-hal = "1.0.0"
embedded-can = "0.4.1"
mcp2515 = "0.3.0"
nb = "1.1.0"

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "d7692b1ae8775723e54de8574a190df4864aa854" }

[features]
esp32   = ["esp-hal/esp32",   "esp-backtrace/esp32",   "esp-hal-embassy/esp32",   "esp-println/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy/esp32c2", "esp-println/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy/esp32c3", "esp-println/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy/esp32c6", "esp-println/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-hal-embassy/esp32h2", "esp-println/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2", "esp-hal-embassy/esp32s2", "esp-println/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-hal-embassy/esp32s3", "esp-println/esp32s3"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
debug = 2

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = true
opt-level = 3
